# cdet-api

./: .gitignore  README.md  build-doc-db.py  config.json  models.py  pyproject.toml  requirements.txt  server.py  settings.toml  settings.toml.default  simple_client.py
cdet_api/: models.py  server.py
data/: dev-topics-all-docs.jsonl  dev-topics.jsonl
scripts/: build_doc_db.py
src/cdet_api/: client.py  server.py  types.py
src/cdet_api/examples/: example_client.py  openapi_client.py
src/cdet_api/scripts/: build_doc_db.py
